--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     </section>
 </main>
 
+<footer class="bg-dark text-white text-center py-3 mt-5">
+    
+    <p> Obrigado por jogar! Teste de Velocidade de Clique</p>
+    <p>Trabalho Des.Web</p>
+    <p>Aluno: Victor Baratta. Prof. Juliana Costa Silva</p>
+ 
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
